--- a/ycwx/html/qygl/css/sign_success.css
+++ b/ycwx/html/qygl/css/sign_success.css
@@ -7,3 +7,11 @@
 .lhp150 { line-height: 150%; }
 .success_class{text-align: center;}
 .remind_class{border="1";}
+body{background: #f3f3f3;margin: 0px;}
+.success_class{position: absolute;top: 15px;left: 50%;margin-left: -160px;}
+.success_class img{width: 320px;height: 110px;background-size: 320px 110px;}
+.remind_class{height: 180px;background: #ffffff;border: 1px solid #DCDCDC;border-radius: 10px; margin: 100px 10px 0px;}
+.div-content{height: 100px;text-align: center;font-size: 16px;color: #FF6A56;padding-top: 40px;}
+.div-remark{height: 40px;text-align: center;}
+.c-74bf00{color: #74BF00;}
+.c-909090{color: #909090;}
